--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
   - postgresql
   - docker
 install:
-  - pipenv install
+  - pipenv install --system
 before_script: pip install docker-compose
 script:
   - docker-compose run web sh -c "python manage.py test"
