--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,11 @@ install:
   - pipenv install --system
 before_script: pip install docker-compose
 script:
+  - export SECRET_KEY=$SECRET_KEY
+  - export DB_NAME=$DB_NAME
+  - export DB_USER=$DB_USER
+  - export DB_PASSWORD=$DB_PASSWORD
+  - export DB_HOST=$DB_HOST
+  - export DB_PORT=$DB_PORT
+  - export CACHE_LOCATION=$CACHE_LOCATION
   - docker-compose run web sh -c "python manage.py test"
