--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ django-tailwind = "*"
 coverage = "*"
 imdbpy = "*"
 django-debug-toolbar = "*"
+django-allauth = "*"
+django-crispy-forms = "*"
 
 [dev-packages]
 
