--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ before_script:
   - echo DB_PASSWORD=$DB_PASSWORD >> .env
   - echo DB_HOST=$DB_HOST >> .env
   - echo DB_PORT=$DB_PORT >> .env
-  - echo CACHE_LOCATION=CACHE_LOCATION >> .env
+  - echo CACHE_LOCATION=$CACHE_LOCATION >> .env
 script:
   - docker-compose run web sh -c "flake8 . && coverage run --source="." manage.py test && coverage report -m"
