--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ env:
   - DJANGO_SETTINGS_MODULE="core.settings"
 services:
   - postgresql
+  - redis
   - docker
 install:
   - pipenv install --system
