--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     networks:
       - djangonetwork
   db:
-    image: postgres:11
+    image: postgres
     container_name: db
     volumes:
       - postgres_data:/var/lib/postgresql/data/
