--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,10 @@ before_script:
   - echo DB_HOST=$DB_HOST >> .env
   - echo DB_PORT=$DB_PORT >> .env
   - echo CACHE_LOCATION=$CACHE_LOCATION >> .env
-  - EMAIL_HOST=$EMAIL_HOST >> .env
-  - EMAIL_HOST_USER=$EMAIL_HOST_USER >> .env
-  - EMAIL_HOST_PASSWORD=$EMAIL_HOST_PASSWORD >> .env
-  - EMAIL_PORT=$EMAIL_PORT >> .env
-  - DEFAULT_FROM_EMAIL=$DEFAULT_FROM_EMAIL >> .env
+  - echo EMAIL_HOST=$EMAIL_HOST >> .env
+  - echo EMAIL_HOST_USER=$EMAIL_HOST_USER >> .env
+  - echo EMAIL_HOST_PASSWORD=$EMAIL_HOST_PASSWORD >> .env
+  - echo EMAIL_PORT=$EMAIL_PORT >> .env
+  - echo DEFAULT_FROM_EMAIL=$DEFAULT_FROM_EMAIL >> .env
 script:
   - docker-compose run web sh -c "flake8 . && coverage run --source="." manage.py test && coverage report -m"
