--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,6 @@ python:
 env:
   - DJANGO_SETTINGS_MODULE="core.settings"
 services:
-  - postgresql
-  - redis
   - docker
 install:
   - pipenv install --system
@@ -25,5 +23,6 @@ before_script:
   - echo EMAIL_HOST_PASSWORD=$EMAIL_HOST_PASSWORD >> .env
   - echo EMAIL_PORT=$EMAIL_PORT >> .env
   - echo DEFAULT_FROM_EMAIL=$DEFAULT_FROM_EMAIL >> .env
+  - cat .env # affiche le contenu
 script:
-  - docker-compose run web sh -c "flake8 . && coverage run --source="." manage.py test && coverage report -m"
+  - docker-compose run web sh -c " sleep 10 && flake8 . && coverage run --source="." manage.py test && coverage report -m"
