add port on docker-compose for postgres

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       - "POSTGRES_HOST_AUTH_METHOD=trust"
     networks:
       - djangonetwork
+    ports:
+       - '5432'
   cache:
     image: redis
     volumes:
