--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,6 @@ script:
   - export EMAIL_PORT=587
   - python manage.py makemigrations
   - python manage.py migrate
-  - python manage.py test
+  - flake8 .
+  - coverage run --source="." manage.py test
+  - coverage report -m
