add env_file to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - cache
     links:
       - db:db
+    env_file:
+      - ./core/.env
     networks:
       - djangonetwork
   db:
